--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e9b5a8">  <td>25/03/20 12:45:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase_1.RegistratonTesting()[pri:0, instance:Test_Cases.TestCase_1@130d63be]">RegistratonTesting</td> 
+<tr bgcolor="929aa9">  <td>25/03/21 09:16:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase_1.RegistratonTesting()[pri:0, instance:Test_Cases.TestCase_1@42a48628]">RegistratonTesting</td> 
   <td>main@710708543</td>   <td></td> </tr>
-<tr bgcolor="d1999a">  <td>25/03/20 12:45:43</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.closeApplication()[pri:0, instance:Test_Cases.TestCase_1@130d63be]">&lt;&lt;closeApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
